[gd_scene load_steps=4 format=3 uid="uid://dda73mlgsy70m"]

[ext_resource type="Script" uid="uid://b1ibble8rdjot" path="res://scripts/interaction_system.gd" id="1_0ynoj"]
[ext_resource type="Texture2D" uid="uid://y2scl0tu70b3" path="res://assets/Keyboard & Mouse/Default/keyboard_e.png" id="2_21jcr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xs8pd"]
radius = 39.0

[node name="InteractionSystem" type="Node2D"]
process_mode = 3
script = ExtResource("1_0ynoj")

[node name="InteractField" type="Area2D" parent="."]
process_mode = 3
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractField"]
process_mode = 4
shape = SubResource("CircleShape2D_xs8pd")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="KeyboardE" type="Sprite2D" parent="."]
z_index = 3
texture_filter = 1
position = Vector2(-9.53674e-07, -37)
scale = Vector2(0.484375, 0.484375)
texture = ExtResource("2_21jcr")

[connection signal="area_entered" from="InteractField" to="." method="_on_interact_field_area_entered"]
[connection signal="area_shape_exited" from="InteractField" to="." method="_on_interact_field_area_shape_exited"]
